--- a/css/display.css
+++ b/css/display.css
@@ -1,10 +1,11 @@
 body{
-    background-image: url("../images/request_back.jpg");
+background-color: white;
     background-size: cover;
     background-repeat: no-repeat;
+   background-color: white;
 }
 .display_table{
-
+font-family: Bahnschrift;
     padding-top: 70px;
     color: white;
     direction: rtl;
@@ -14,5 +15,8 @@ body{
     background-color: black;
     opacity: 0.9;
     padding-bottom: 30px;
-
+}
+button{
+    margin: 54px auto;
+    background-color: white;
 }
