--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body {
 .register{
     width: 500px;
     margin: 220px 0px 0px 430px;
-    background-color: black;
+    background-color: white;
     opacity: 0.9;
     font-size: 18px;
 }
@@ -29,4 +29,7 @@ label{
 h2{
     margin: 0px 0px 0px 130px;
     padding-top: 20px;
+}
+button{
+    margin-bottom: 50px;
 }
